# newKVBduino

./: platformio.ini  test.py
client/: CMakeLists.txt  conanfile.txt  main.cpp
client/messages/: messages.cpp  messages.hpp
client/tests/: tests.cpp  tests.hpp
src/: helper.cpp  helper.hpp  main json.no-cpp  main.cpp  pins.hpp
src/7segs/: 7segs.cpp  7segs.hpp  definitions.hpp
src/buttons/: buttons.cpp  buttons.hpp  buttonsSend.cpp  buttonsSend.hpp
src/handleInput/: handleInput.cpp  handleInput.hpp
src/messages/: messages.cpp  messages.hpp
